[package]
name = "fourteen"
version = "0.1.0"
authors = ["niranjana687 <niranjana687@gmail.com>"]
edition = "2018"
description = "Library to find factorial and other utitlties"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
